feat: Adição de imagens

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Make a List!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="./images/logomarca.png">
 </head>
 <body>
     <div class="container">
         <div class="left">
-            <a class="btn" href="#"><h1>Make a List!</h1></a>
+            <a class="btn" href="#apresentacao"><h1>Make a List!</h1></a>
             <a class="btn" href="#apresentacao">Apresentação</a>
             <a class="btn" href="#identidade-visual-cores">Identidade Visual</a>
             <a class="btn" href="#prototipo">Protótipo</a>
@@ -50,7 +51,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><img src="#" alt="Cor Azul Árdósia"></li>
+                            <li><img src="./images/azul-ardosia.png" alt="Cor Azul Árdósia"></li>
                             <li>Azul Árdósia</li>
                             <li>Inspiração</li>
                             <li>Criatividade</li>
@@ -59,7 +60,7 @@
                     </li>
                     <li>
                         <ul>
-                            <li><img src="#" alt="Cor Azul Céu"></li>
+                            <li><img src="./images/azul-ceu.png" alt="Cor Azul Céu"></li>
                             <li>Azul Céu</li>
                             <li>Amizade</li>
                             <li>Confiança</li>
@@ -68,7 +69,7 @@
                     </li>
                     <li>
                         <ul>
-                            <li><img src="#" alt="Cor Alvacento"></li>
+                            <li><img src="./images/alvacento.png" alt="Cor Alvacento"></li>
                             <li>Alvacento</li>
                             <li>Equilíbrio</li>
                             <li>Elegância</li>
@@ -80,20 +81,20 @@
             <section id="identidade-visual-logotipo">
                 <h2>Identidade Visual - Logotipo</h2>
                 <p>Para a composição do logotipo, utilizamos a fonte Kaushan Script  pela sua caligrafia elegante remetendo coisas escritas à mão.</p>
-                <img src="#" alt="Logotipo Make a List!">
+                <img src="./images/logotipo.png" alt="Logotipo Make a List!">
             </section>
             <section id="identidade-visual-logomarca">
                 <h2>Identidade Visual - Logomarca</h2>
                 <p>Para logomarca, mantivemos o primeiro e o último elemento do logotipo.</p>
-                <img src="#" alt="Logomarca Make a List!">
+                <img src="./images/logomarca.png" alt="Logomarca Make a List!">
             </section>
             <section id="identidade-visual-moodboard">
                 <h2>Identidade Visual - Moodboard</h2>
-                <img src="#" alt="Moodboard Make a List!">
+                <img src="./images/moodboard.png" alt="Moodboard Make a List!">
             </section>
             <section id="prototipo">
                 <h2>Protótipo</h2>
-                <img src="#" alt="Protótipo Make a List!">
+                <img src="./images/prototipo.png" alt="Protótipo Make a List!">
             </section>
             <section id="front-end">
                 <h2>Front-end</h2>
@@ -360,23 +361,23 @@
                     <ul>
                         <li>
                             <h4>Acesso ao sistema</h4>
-                            <img src="#" alt="BPMN - Acesso ao sistema">
+                            <img src="./images/bpmn-acesso_ao_sistema.svg" alt="BPMN - Acesso ao sistema">
                         </li>
                         <li>
                             <h4>Criar listas e/ou grupos de listas de compras</h4>
-                            <img src="#" alt="BPMN - Criar listas e/ou grupos de listas de compras">
+                            <img src="./images/bpmn-criar_listas.svg" alt="BPMN - Criar listas e/ou grupos de listas de compras">
                         </li>
                         <li>
                             <h4>Ações possíveis em uma lista</h4>
-                            <img src="#" alt="BPMN - Ações possíveis em uma lista">
+                            <img src="./images/bpmn-acoes_possiveis.svg" alt="BPMN - Ações possíveis em uma lista">
                         </li>
                         <li>
                             <h4>Editar itens da lista</h4>
-                            <img src="#" alt="BPMN - Editar itens da lista">
+                            <img src="./images/bpmn-editar_itens.svg" alt="BPMN - Editar itens da lista">
                         </li>
                         <li>
                             <h4>Compartilhamento de listas e/ou grupos de listas de compras</h4>
-                            <img src="#" alt="BPMN - Compartilhamento de listas e/ou grupos de listas de compras">
+                            <img src="./images/bpmn-compartilhamento.svg" alt="BPMN - Compartilhamento de listas e/ou grupos de listas de compras">
                         </li>
                     </ul>
                 </div>
