feat: remove HTML de requisitos não funcionais e os insere via JS

--- a/index.html
+++ b/index.html
@@ -158,308 +158,14 @@
           <h2>Documentação - Requisitos e Casos de Uso</h2>
           <div id="documentacao-requisitos">
             <div id="documentacao-requisitos-funcionais">
-              <h4 id="requisitos-funcionais-heading">Requisitos Funcionais:</h4>
-              <!-- DIV abaixo criada via JS -->
+              <h4 id="requisitos-heading">Requisitos Funcionais:</h4>
+              <!-- REQ FUNC injetado via JS -->
               <div id="requisitos-funcionais"></div>
             </div>
             <div id="documentacao-requisitos-nao-funcionais">
-              <h4>Requisitos Não Funcionais</h4>
-              <ul>
-                <li>
-                  <h5>RNF001 - Usabilidade</h5>
-                  <p>
-                    <strong>Tipo: </strong
-                    ><input
-                      aria-label="usabilidade"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Usabilidade
-                    <input aria-label="desempenho" type="checkbox" disabled />
-                    Desempenho
-                    <input aria-label="seguranca" type="checkbox" disabled />
-                    Segurança
-                    <input
-                      aria-label="compatibilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Compatibilidade
-                    <input
-                      aria-label="escalabilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Escalabilidade
-                  </p>
-                  <p>
-                    <strong>Obrigatoriedade: </strong
-                    ><input
-                      aria-label="obrigatorio"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Obrigatório
-                    <input aria-label="desejavel" type="checkbox" disabled />
-                    Desejável
-                  </p>
-                  <p>
-                    <strong>Durabilidade: </strong
-                    ><input
-                      aria-label="permanente"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Permanente
-                    <input aria-label="transitorio" type="checkbox" disabled />
-                    Transitório
-                  </p>
-                  <p>
-                    <strong>Descrição: </strong>A interface da aplicação deve
-                    ser intuitiva e de fácil utilização para garantir uma
-                    experiência positiva do usuário. As ações devem ser claras e
-                    autoexplicativas. Este requisito de usabilidade é
-                    obrigatório e permanente, pois é fundamental para a
-                    satisfação dos usuários a longo prazo.
-                  </p>
-                </li>
-                <li>
-                  <h5>RNF002 - Desempenho</h5>
-                  <p>
-                    <strong>Tipo: </strong
-                    ><input aria-label="usabilidade" type="checkbox" disabled />
-                    Usabilidade
-                    <input
-                      aria-label="desempenho"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Desempenho
-                    <input aria-label="seguranca" type="checkbox" disabled />
-                    Segurança
-                    <input
-                      aria-label="compatibilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Compatibilidade
-                    <input
-                      aria-label="escalabilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Escalabilidade
-                  </p>
-                  <p>
-                    <strong>Obrigatoriedade: </strong
-                    ><input
-                      aria-label="obrigatorio"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Obrigatório
-                    <input aria-label="desejavel" type="checkbox" disabled />
-                    Desejável
-                  </p>
-                  <p>
-                    <strong>Durabilidade: </strong
-                    ><input
-                      aria-label="permanente"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Permanente
-                    <input aria-label="transitorio" type="checkbox" disabled />
-                    Transitório
-                  </p>
-                  <p>
-                    <strong>Descrição: </strong>A aplicação deve responder de
-                    forma rápida e eficiente, mesmo com um grande número de
-                    itens ou listas cadastradas. Este requisito de desempenho é
-                    obrigatório e permanente, garantindo que a aplicação seja
-                    responsiva em todas as situações.
-                  </p>
-                </li>
-                <li>
-                  <h5>RNF003 - Segurança</h5>
-                  <p>
-                    <strong>Tipo: </strong
-                    ><input aria-label="usabilidade" type="checkbox" disabled />
-                    Usabilidade
-                    <input aria-label="desempenho" type="checkbox" disabled />
-                    Desempenho
-                    <input
-                      aria-label="seguranca"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Segurança
-                    <input
-                      aria-label="compatibilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Compatibilidade
-                    <input
-                      aria-label="escalabilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Escalabilidade
-                  </p>
-                  <p>
-                    <strong>Obrigatoriedade: </strong
-                    ><input
-                      aria-label="obrigatorio"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Obrigatório
-                    <input aria-label="desejavel" type="checkbox" disabled />
-                    Desejável
-                  </p>
-                  <p>
-                    <strong>Durabilidade: </strong
-                    ><input
-                      aria-label="permanente"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Permanente
-                    <input aria-label="transitorio" type="checkbox" disabled />
-                    Transitório
-                  </p>
-                  <p>
-                    <strong>Descrição: </strong>As senhas dos usuários devem ser
-                    armazenadas de maneira segura e protegidas por hash. As
-                    informações pessoais dos usuários não devem ser acessíveis
-                    por outros usuários. Este requisito de segurança é
-                    obrigatório e permanente, garantindo a proteção das
-                    informações dos usuários.
-                  </p>
-                </li>
-                <li>
-                  <h5>RNF004 - Compatibilidade com Dispositivos</h5>
-                  <p>
-                    <strong>Tipo: </strong
-                    ><input aria-label="usabilidade" type="checkbox" disabled />
-                    Usabilidade
-                    <input aria-label="desempenho" type="checkbox" disabled />
-                    Desempenho
-                    <input aria-label="seguranca" type="checkbox" disabled />
-                    Segurança
-                    <input
-                      aria-label="compatibilidade"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Compatibilidade
-                    <input
-                      aria-label="escalabilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Escalabilidade
-                  </p>
-                  <p>
-                    <strong>Obrigatoriedade: </strong
-                    ><input
-                      aria-label="obrigatorio"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Obrigatório
-                    <input aria-label="desejavel" type="checkbox" disabled />
-                    Desejável
-                  </p>
-                  <p>
-                    <strong>Durabilidade: </strong
-                    ><input
-                      aria-label="permanente"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Permanente
-                    <input aria-label="transitorio" type="checkbox" disabled />
-                    Transitório
-                  </p>
-                  <p>
-                    <strong>Descrição: </strong>A aplicação deve ser responsiva
-                    e funcionar adequadamente em dispositivos móveis e desktops.
-                    Este requisito de compatibilidade com dispositivos é
-                    obrigatório e permanente, garantindo que os usuários possam
-                    acessar a aplicação de diferentes dispositivos.
-                  </p>
-                </li>
-                <li>
-                  <h5>RNF005 - Escalabilidade</h5>
-                  <p>
-                    <strong>Tipo: </strong
-                    ><input aria-label="usabilidade" type="checkbox" disabled />
-                    Usabilidade
-                    <input aria-label="desempenho" type="checkbox" disabled />
-                    Desempenho
-                    <input aria-label="seguranca" type="checkbox" disabled />
-                    Segurança
-                    <input
-                      aria-label="compatibilidade"
-                      type="checkbox"
-                      disabled
-                    />
-                    Compatibilidade
-                    <input
-                      aria-label="escalabilidade"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Escalabilidade
-                  </p>
-                  <p>
-                    <strong>Obrigatoriedade: </strong
-                    ><input
-                      aria-label="obrigatorio"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Obrigatório
-                    <input aria-label="desejavel" type="checkbox" disabled />
-                    Desejável
-                  </p>
-                  <p>
-                    <strong>Durabilidade: </strong
-                    ><input
-                      aria-label="permanente"
-                      type="checkbox"
-                      checked
-                      disabled
-                    />
-                    Permanente
-                    <input aria-label="transitorio" type="checkbox" disabled />
-                    Transitório
-                  </p>
-                  <p>
-                    <strong>Descrição: </strong>O sistema deve ser projetado
-                    para lidar com um aumento gradual de usuários e dados. Este
-                    requisito de escalabilidade é obrigatório e permanente,
-                    assegurando que a aplicação possa crescer de forma
-                    sustentável com o aumento da demanda.
-                  </p>
-                </li>
-              </ul>
+              <h4 id="requisitos-heading" class="mt">Requisitos Não Funcionais</h4>
+              <!-- REQ NÃO FUNC injetado via JS -->
+              <div id="requisitos-nao-funcionais"></div>
             </div>
           </div>
           <div id="documentacao-casos-uso">
@@ -813,6 +519,7 @@
     </div>
 
     <script type="text/javascript" src="./requisitosFuncionais.js"></script>
+    <script type="text/javascript" src="./requisitosNaoFuncionais.js"></script>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
