feat: remove HTML referente a casos de usos e os insere dinamicamente via JS

--- a/index.html
+++ b/index.html
@@ -163,318 +163,23 @@
               <div id="requisitos-funcionais"></div>
             </div>
             <div id="documentacao-requisitos-nao-funcionais">
-              <h4 id="requisitos-heading" class="mt">Requisitos Não Funcionais</h4>
+              <h4 id="requisitos-heading" class="mt">
+                Requisitos Não Funcionais
+              </h4>
               <!-- REQ NÃO FUNC injetado via JS -->
               <div id="requisitos-nao-funcionais"></div>
             </div>
           </div>
           <div id="documentacao-casos-uso">
-            <h3>Casos de Uso</h3>
-            <ul>
-              <li>
-                <h5>UC001 - Cadastro de Usuário</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário cria uma conta na
-                  plataforma para acessar as funcionalidades.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário não possui uma conta.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>O usuário seleciona a opção de criar conta.</li>
-                  <li>O usuário fornece seu nome, e-mail e senha.</li>
-                  <li>
-                    O sistema valida as informações e cria a conta do usuário.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>O usuário tem uma conta criada
-                  e pode fazer login.
-                </p>
-              </li>
-              <li>
-                <h5>UC002 - Autenticação</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário faz login na plataforma
-                  usando suas credenciais.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui uma conta.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>O usuário insere seu e-mail e senha.</li>
-                  <li>O sistema valida as credenciais do usuário.</li>
-                  <li>
-                    O usuário é redirecionado para a página principal da
-                    aplicação.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>O usuário está autenticado na
-                  plataforma.
-                </p>
-              </li>
-              <li>
-                <h5>UC003 - Criar Lista de Compras</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário cria uma nova lista de
-                  compras.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário está autenticado na
-                  plataforma.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>O usuário acessa a página de criação de listas.</li>
-                  <li>O usuário escolhe um nome, ícone e cor para a lista.</li>
-                  <li>O sistema cria uma lista vazia.</li>
-                </ol>
-                <p><strong>Cenário Alternativo:</strong></p>
-                <ol>
-                  <li>O usuário acessa a página de criação de listas.</li>
-                  <li>O usuário cria uma lista a partir de um modelo.</li>
-                  <li>
-                    O sistema cria uma lista a partir do modelo selecionado.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>Uma nova lista de compras é
-                  criada.
-                </p>
-              </li>
-              <li>
-                <h5>UC004 - Adicionar Itens à Lista</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário adiciona itens à sua
-                  lista de compras.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui uma lista de
-                  compras.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário seleciona a lista em que deseja adicionar itens.
-                  </li>
-                  <li>
-                    O usuário insere o nome, quantidade, preço e categoria do
-                    item.
-                  </li>
-                  <li>O sistema adiciona o item à lista.</li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>O item é adicionado à lista de
-                  compras.
-                </p>
-              </li>
-              <li>
-                <h5>UC005 - Criar Modelo de Lista de Compras</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário cria uma lista de
-                  compras padrão para reutilização.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário está autenticado na
-                  plataforma e possui uma lista criada.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>O usuário acessa a lista criada.</li>
-                  <li>O usuário marca a lista como modelo.</li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>Um novo modelo de lista de
-                  compras é criado.
-                </p>
-              </li>
-              <li>
-                <h5>UC006 - Editar Itens da Lista</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário edita informações de
-                  itens da lista de compras.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui uma lista de
-                  compras com itens.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário seleciona a lista com itens a serem editados.
-                  </li>
-                  <li>
-                    O usuário pode editar as informações (nome, categoria,
-                    quantidade, preço) e/ou excluir itens da lista.
-                  </li>
-                  <li>O sistema atualiza as informações dos itens.</li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>Os itens são atualizados e o
-                  custo total é recalculado.
-                </p>
-              </li>
-              <li>
-                <h5>UC007 - Criar Grupos de Listas</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário cria grupos para
-                  organizar listas relacionadas.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário está autenticado na
-                  plataforma.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>O usuário acessa a página de criação de grupos.</li>
-                  <li>O usuário escolhe um nome, ícone e cor para o grupo.</li>
-                  <li>
-                    O usuário pode a partir de agora, criar listas dentro do
-                    grupo.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>Um novo grupo de listas é
-                  criado.
-                </p>
-              </li>
-              <li>
-                <h5>UC008 - Compartilhar Listas e/ou Grupos de Listas</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário compartilha listas e/ou
-                  grupos de listas com outros usuários.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui listas e/ou
-                  grupos de listas criados.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário seleciona a lista e/ou o grupo de listas que
-                    deseja compartilhar.
-                  </li>
-                  <li>O usuário insere os e-mails dos destinatários.</li>
-                  <li>
-                    O sistema automaticamente adiciona o usuário à lista e/ou ao
-                    grupo de listas.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>Os destinatários têm acesso à
-                  lista e/ou ao grupo de listas compartilhado e podem visualizar
-                  e editar as listas nele contidas, ou sair do compartilhamento.
-                </p>
-              </li>
-              <li>
-                <h5>UC009 - Arquivar Lista de Compras e ou Grupo de Listas</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário arquiva uma lista de
-                  compras e/ou um grupo de listas existente.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui uma lista de
-                  compras e/ou um grupo de listas criado.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário seleciona a lista de compras e/ou um grupo de
-                    listas que deseja arquivar.
-                  </li>
-                  <li>
-                    O sistema marca a lista de compras e/ou um grupo de listas
-                    como arquivado.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>A lista de compras e/ou um
-                  grupo de listas é movido para o arquivo.
-                </p>
-              </li>
-              <li>
-                <h5>UC010 - Excluir Lista de Compras e ou Grupo de Listas</h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário exclui uma lista de
-                  compras e/ou um grupo de listas existente.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário possui uma lista de
-                  compras e/ou um grupo de listas criado.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário seleciona a lista de compras e/ou um grupo de
-                    listas que deseja excluir.
-                  </li>
-                  <li>
-                    O usuário confirma a exclusão da lista e/ou do grupo de
-                    listas.
-                  </li>
-                  <li>
-                    O sistema envia para a lixeira a lista de compras e/ou um
-                    grupo de listas do sistema.
-                  </li>
-                  <li>
-                    Após 7 dias, o sistema remove permanentemente os itens
-                    adicionados à lixeira.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>A lista de compras e/ou um
-                  grupo de listas é excluído do sistema.
-                </p>
-              </li>
-              <li>
-                <h5>
-                  UC011 - Remover o Compartilhamento de um Usuário de uma Lista
-                  e/ou Grupo de Listas
-                </h5>
-                <p>
-                  <strong>Descrição: </strong>O usuário remove um membro de uma
-                  lista e/ou um grupo de listas.
-                </p>
-                <p><strong>Ator Primário: </strong>Usuário</p>
-                <p>
-                  <strong>Pré-Condição: </strong>O usuário é membro de uma lista
-                  e/ou um grupo de listas.
-                </p>
-                <p><strong>Cenário Principal:</strong></p>
-                <ol>
-                  <li>
-                    O usuário acessa a página de gerenciamento de
-                    compartilhamento da lista ou do grupo.
-                  </li>
-                  <li>O usuário seleciona o membro que deseja remover.</li>
-                  <li>O usuário confirma a remoção do membro.</li>
-                  <li>
-                    O sistema remove o membro da lista e/ou do grupo de listas.
-                  </li>
-                </ol>
-                <p>
-                  <strong>Pós-Condição: </strong>O membro é removido do
-                  compartilhamento.
-                </p>
-              </li>
-            </ul>
+            <h4 id="requisitos-heading" class="mt">Casos de Uso</h4>
+            <!-- CASOS USOS injetados via JS -->
+            <div id="casos-usos"></div>
           </div>
           <div id="documentacao-bpmn">
-            <h3>BPMN (Business Process Model and Notation)</h3>
-            <ul>
+            <h3 id="requisitos-heading" class="mt">
+              BPMN (Business Process Model and Notation)
+            </h3>
+            <ul id="doc-bpmn">
               <li>
                 <h4>Acesso ao sistema</h4>
                 <img
@@ -520,6 +225,7 @@
 
     <script type="text/javascript" src="./requisitosFuncionais.js"></script>
     <script type="text/javascript" src="./requisitosNaoFuncionais.js"></script>
+    <script type="text/javascript" src="./casosUsos.js"></script>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
